// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/forms/SelectRange should be openable / closeable 1`] = `
.c0 {
  display: flex;
  flex-direction: row;
  gap: 8px;
  align-items: center;
}

.c4 {
  display: block;
  border: none;
  background: transparent;
  outline: none;
  cursor: pointer;
}

.c4:disabled {
  cursor: not-allowed;
}

.c6 {
  flex: 1;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c5 {
  font-family: Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  color: #002d56;
  display: inline-flex;
  flex-direction: row;
  align-items: center;
  gap: 12px;
  line-height: 1;
  font-weight: 700;
  height: 40px;
  padding: 0 16px;
  padding-left: 12px;
  padding-right: 12px;
  border: 2px solid #002d56;
  background: #fff;
  width: 100%;
  height: 40px;
  gap: 8px;
  padding-left: 12px;
  padding-right: 12px;
}

.c5:hover:not(:disabled) {
  background-color: #f2f7fa;
}

.c5:focus {
  outline: 1px dashed #002d56;
}

.c5:disabled {
  color: #98c3d9;
  border-color: #98c3d9;
  background-color: #fff;
}

.c7 {
  font-size: 14px;
  font-weight: 400;
  text-align: left;
}

.c8 {
  position: absolute;
  top: calc(100% + 4px);
  left: 0;
  width: 240px;
  overflow: hidden;
  z-index: 1000;
  background: #fff;
  border: 1px solid #002d56;
  box-shadow: 1px 1px 4px #dae0e3;
}

.c9 {
  list-style-type: none;
  overflow-y: auto;
  max-height: 360px;
}

.c10 {
  border-bottom: 1px solid #dae0e3;
}

.c10:last-child {
  border-bottom: none;
}

.c11 {
  font-family: Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  color: #002d56;
  width: 100%;
  padding: 4px 8px;
  background: #fff;
  white-space: nowrap;
  text-align: left;
}

.c11:hover {
  background-color: #f2f7fa;
}

.c11:focus {
  outline: 1px dashed #002d56;
  outline-offset: -1px;
}

.c11:disabled {
  color: #98c3d9;
}

.c3 {
  position: relative;
  display: inline-block;
  width: 100%;
}

.c1 {
  display: flex;
  flex-direction: column;
  gap: 4px;
  border: none;
}

.c2 {
  position: relative;
  display: flex;
  flex-direction: row;
  gap: 8px;
  align-items: center;
  justify-content: start;
}

.c12::after {
  font-family: Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  color: #002d56;
  font-size: 18px;
  line-height: 24px;
  content: '-';
  font-weight: 700;
}

<div>
  <div
    class="c0"
  >
    <fieldset
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <button
            class="c4 c5"
            id="select-10"
            title="Zavřít"
            type="button"
          >
            <span
              class="c6 c7"
            >
              1
            </span>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-angle-up fa-lg "
              data-icon="angle-up"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M201.4 137.4c12.5-12.5 32.8-12.5 45.3 0l160 160c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L224 205.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l160-160z"
                fill="currentColor"
              />
            </svg>
          </button>
          <div
            class="c8"
          >
            <ul
              class="c9"
            >
              <li
                class="c10"
              >
                <button
                  class="c4 c11"
                  type="button"
                >
                  0
                </button>
              </li>
              <li
                class="c10"
              >
                <button
                  class="c4 c11"
                  type="button"
                >
                  1
                </button>
              </li>
              <li
                class="c10"
              >
                <button
                  class="c4 c11"
                  type="button"
                >
                  2
                </button>
              </li>
              <li
                class="c10"
              >
                <button
                  class="c4 c11"
                  type="button"
                >
                  3
                </button>
              </li>
              <li
                class="c10"
              >
                <button
                  class="c4 c11"
                  disabled=""
                  type="button"
                >
                  4
                </button>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </fieldset>
    <div
      class="c12"
    />
    <fieldset
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <button
            class="c4 c5"
            id="select-11"
            title="Otevřít"
            type="button"
          >
            <span
              class="c6 c7"
            >
              3
            </span>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-angle-down fa-lg "
              data-icon="angle-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M201.4 374.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 306.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`components/forms/SelectRange should be openable / closeable 2`] = `
.c0 {
  display: flex;
  flex-direction: row;
  gap: 8px;
  align-items: center;
}

.c4 {
  display: block;
  border: none;
  background: transparent;
  outline: none;
  cursor: pointer;
}

.c4:disabled {
  cursor: not-allowed;
}

.c6 {
  flex: 1;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c5 {
  font-family: Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  color: #002d56;
  display: inline-flex;
  flex-direction: row;
  align-items: center;
  gap: 12px;
  line-height: 1;
  font-weight: 700;
  height: 40px;
  padding: 0 16px;
  padding-left: 12px;
  padding-right: 12px;
  border: 2px solid #002d56;
  background: #fff;
  width: 100%;
  height: 40px;
  gap: 8px;
  padding-left: 12px;
  padding-right: 12px;
}

.c5:hover:not(:disabled) {
  background-color: #f2f7fa;
}

.c5:focus {
  outline: 1px dashed #002d56;
}

.c5:disabled {
  color: #98c3d9;
  border-color: #98c3d9;
  background-color: #fff;
}

.c7 {
  font-size: 14px;
  font-weight: 400;
  text-align: left;
}

.c9 {
  position: absolute;
  top: calc(100% + 4px);
  left: 0;
  width: 240px;
  overflow: hidden;
  z-index: 1000;
  background: #fff;
  border: 1px solid #002d56;
  box-shadow: 1px 1px 4px #dae0e3;
}

.c10 {
  list-style-type: none;
  overflow-y: auto;
  max-height: 360px;
}

.c11 {
  border-bottom: 1px solid #dae0e3;
}

.c11:last-child {
  border-bottom: none;
}

.c12 {
  font-family: Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  color: #002d56;
  width: 100%;
  padding: 4px 8px;
  background: #fff;
  white-space: nowrap;
  text-align: left;
}

.c12:hover {
  background-color: #f2f7fa;
}

.c12:focus {
  outline: 1px dashed #002d56;
  outline-offset: -1px;
}

.c12:disabled {
  color: #98c3d9;
}

.c3 {
  position: relative;
  display: inline-block;
  width: 100%;
}

.c1 {
  display: flex;
  flex-direction: column;
  gap: 4px;
  border: none;
}

.c2 {
  position: relative;
  display: flex;
  flex-direction: row;
  gap: 8px;
  align-items: center;
  justify-content: start;
}

.c8::after {
  font-family: Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  color: #002d56;
  font-size: 18px;
  line-height: 24px;
  content: '-';
  font-weight: 700;
}

<div>
  <div
    class="c0"
  >
    <fieldset
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <button
            class="c4 c5"
            id="select-10"
            title="Otevřít"
            type="button"
          >
            <span
              class="c6 c7"
            >
              1
            </span>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-angle-down fa-lg "
              data-icon="angle-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M201.4 374.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 306.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
    </fieldset>
    <div
      class="c8"
    />
    <fieldset
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <button
            class="c4 c5"
            id="select-11"
            title="Zavřít"
            type="button"
          >
            <span
              class="c6 c7"
            >
              3
            </span>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-angle-up fa-lg "
              data-icon="angle-up"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M201.4 137.4c12.5-12.5 32.8-12.5 45.3 0l160 160c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L224 205.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l160-160z"
                fill="currentColor"
              />
            </svg>
          </button>
          <div
            class="c9"
          >
            <ul
              class="c10"
            >
              <li
                class="c11"
              >
                <button
                  class="c4 c12"
                  disabled=""
                  type="button"
                >
                  0
                </button>
              </li>
              <li
                class="c11"
              >
                <button
                  class="c4 c12"
                  type="button"
                >
                  1
                </button>
              </li>
              <li
                class="c11"
              >
                <button
                  class="c4 c12"
                  type="button"
                >
                  2
                </button>
              </li>
              <li
                class="c11"
              >
                <button
                  class="c4 c12"
                  type="button"
                >
                  3
                </button>
              </li>
              <li
                class="c11"
              >
                <button
                  class="c4 c12"
                  type="button"
                >
                  4
                </button>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`components/forms/SelectRange should not render when no values 1`] = `<div />`;

exports[`components/forms/SelectRange should render formatted values 1`] = `
.c0 {
  display: flex;
  flex-direction: row;
  gap: 8px;
  align-items: center;
}

.c4 {
  display: block;
  border: none;
  background: transparent;
  outline: none;
  cursor: pointer;
}

.c4:disabled {
  cursor: not-allowed;
}

.c6 {
  flex: 1;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c5 {
  font-family: Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  color: #002d56;
  display: inline-flex;
  flex-direction: row;
  align-items: center;
  gap: 12px;
  line-height: 1;
  font-weight: 700;
  height: 40px;
  padding: 0 16px;
  padding-left: 12px;
  padding-right: 12px;
  border: 2px solid #002d56;
  background: #fff;
  width: 100%;
  height: 40px;
  gap: 8px;
  padding-left: 12px;
  padding-right: 12px;
}

.c5:hover:not(:disabled) {
  background-color: #f2f7fa;
}

.c5:focus {
  outline: 1px dashed #002d56;
}

.c5:disabled {
  color: #98c3d9;
  border-color: #98c3d9;
  background-color: #fff;
}

.c7 {
  font-size: 14px;
  font-weight: 400;
  text-align: left;
}

.c3 {
  position: relative;
  display: inline-block;
  width: 100%;
}

.c1 {
  display: flex;
  flex-direction: column;
  gap: 4px;
  border: none;
}

.c2 {
  position: relative;
  display: flex;
  flex-direction: row;
  gap: 8px;
  align-items: center;
  justify-content: start;
}

.c8::after {
  font-family: Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  color: #002d56;
  font-size: 18px;
  line-height: 24px;
  content: '-';
  font-weight: 700;
}

<div>
  <div
    class="c0"
  >
    <fieldset
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <button
            class="c4 c5"
            id="select-8"
            title="Otevřít"
            type="button"
          >
            <span
              class="c6 c7"
            >
              30%
            </span>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-angle-down fa-lg "
              data-icon="angle-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M201.4 374.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 306.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
    </fieldset>
    <div
      class="c8"
    />
    <fieldset
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <button
            class="c4 c5"
            id="select-9"
            title="Otevřít"
            type="button"
          >
            <span
              class="c6 c7"
            >
              70%
            </span>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-angle-down fa-lg "
              data-icon="angle-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M201.4 374.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 306.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`components/forms/SelectRange should render properly 1`] = `
.c0 {
  display: flex;
  flex-direction: row;
  gap: 8px;
  align-items: center;
}

.c5 {
  display: block;
  border: none;
  background: transparent;
  outline: none;
  cursor: pointer;
}

.c5:disabled {
  cursor: not-allowed;
}

.c7 {
  flex: 1;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c6 {
  font-family: Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  color: #002d56;
  display: inline-flex;
  flex-direction: row;
  align-items: center;
  gap: 12px;
  line-height: 1;
  font-weight: 700;
  height: 40px;
  padding: 0 16px;
  padding-left: 12px;
  padding-right: 12px;
  border: 2px solid #002d56;
  background: #fff;
  width: 100%;
  height: 40px;
  gap: 8px;
  padding-left: 12px;
  padding-right: 12px;
}

.c6:hover:not(:disabled) {
  background-color: #f2f7fa;
}

.c6:focus {
  outline: 1px dashed #002d56;
}

.c6:disabled {
  color: #98c3d9;
  border-color: #98c3d9;
  background-color: #fff;
}

.c8 {
  font-size: 14px;
  font-weight: 400;
  text-align: left;
}

.c4 {
  position: relative;
  display: inline-block;
  width: 100%;
}

.c3 {
  font-family: Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  color: #002d56;
  display: flex;
  flex-direction: row;
  gap: 4px;
  white-space: nowrap;
}

.c1 {
  display: flex;
  flex-direction: column;
  gap: 4px;
  border: none;
}

.c2 {
  position: relative;
  display: flex;
  flex-direction: row;
  gap: 8px;
  align-items: center;
  justify-content: start;
}

.c9::after {
  font-family: Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  color: #002d56;
  font-size: 18px;
  line-height: 24px;
  content: '-';
  font-weight: 700;
}

<div>
  <div
    class="c0"
  >
    <fieldset
      class="c1"
    >
      <div
        class="c2"
      >
        <label
          class="c3 "
          for="select-0"
        >
          LABEL
        </label>
        <div
          class="c4"
        >
          <button
            class="c5 c6"
            id="select-0"
            title="Otevřít"
            type="button"
          >
            <span
              class="c7 c8"
            >
              1
            </span>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-angle-down fa-lg "
              data-icon="angle-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M201.4 374.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 306.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
    </fieldset>
    <div
      class="c9"
    />
    <fieldset
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c4"
        >
          <button
            class="c5 c6"
            id="select-1"
            title="Otevřít"
            type="button"
          >
            <span
              class="c7 c8"
            >
              8
            </span>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-angle-down fa-lg "
              data-icon="angle-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M201.4 374.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 306.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;
